add navigation to default

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@
             <li><a class="buttons github" href="{{ site.github.owner_url }}">GitHub Profile</a></li>
           </ul>
         {% endif %}
+          {% include navigation.html %}
       </header>
 
       <section>
