--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,9 @@
           {% endif %}
           <li><a class="buttons github" href="{{ site.github.repository_url }}">View On GitHub</a></li>
         </ul>
-
+<p class="header">
 {% include navigation.html %}
-
+</p>
         {% if site.github.is_project_page %}
           <p class="header">This project is maintained by <a class="header name" href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
