list of bioms per realm

--- a/_layouts/realm.html
+++ b/_layouts/realm.html
@@ -4,3 +4,11 @@ layout: default
 <h1>{{ page.name }}</h1>
 
 {{ content }}
+
+<h2>Biomes</h2>
+<ul>
+  {% assign filtered_posts = site.Biomes | where: 'realm', page.name %}
+  {% for post in filtered_posts %}
+    <li><a href="{{ post.code }}">{{ post.name }}</a></li>
+  {% endfor %}
+</ul>
