where does this path lead us?

--- a/_layouts/biome.html
+++ b/_layouts/biome.html
@@ -69,7 +69,7 @@ Strongly disagree <input type="range" name="diagram" min="0" max="10" step="1">S
 <ul>
   {% assign filtered_posts = site.EFGs | where: 'biomecode', page.code %}
   {% for post in filtered_posts %}
-    <li><a href="EFGs/{{ post.code }}.html">{{ post.name }}</a></li>
+    <li><a href="../EFGs/{{ post.code }}.html">{{ post.name }}</a></li>
   {% endfor %}
 </ul>
 
