--- a/_layouts/biome.html
+++ b/_layouts/biome.html
@@ -5,10 +5,7 @@ layout: default
 <h4>Contributors: {{ page.contributors }}</h4>
 <div style=";
    position: relative;
-  left: 0px;
-  padding: 15px;
-  border: 3px solid #AD2221;
-  width: 60%;">
+  left: 0px;">
 
    <div style="background-color:#67A6F5;
    position: fixed;
