--- a/_layouts/biome.html
+++ b/_layouts/biome.html
@@ -5,7 +5,8 @@ layout: default
 <h4>Contributors: {{ page.contributors }}</h4>
 <div style=";
    position: relative;
-  left: 0px;">
+  left: 0px;padding: 15px;
+  width: 60%;">
 
    <div style="background-color:#67A6F5;
    position: fixed;
