--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,7 @@
 
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p><small> {{ page.name }} </small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
