--- a/_layouts/biome.html
+++ b/_layouts/biome.html
@@ -18,44 +18,9 @@ section: browse
   max-width: 35%;
   padding: 15px;
   margin: auto;">
-<form action="https://smartforms.dev/submit/5e20e9c5d2b1f304f0563ae2" method="POST">
- We kindly ask your opinion for the development of a Global Ecosystem Typology.
- <input type="hidden" name="EFG" value="{{ page.name }}"><br/>
- <h3>Contact information</h3>
- Your name: <input type="text" name="name"><br/>
-Your affiliation: <input type="text" name="affiliation"><br/>
 
-   <h3>Your opinion</h3>
-   <div style="padding: 3px;">
-  <b>This profile is informative</b> <br/>
-  Strongly disagree <input type="range" name="informative" min="0" max="10" step="1">Strongly agree
-</div>
-<div style="padding: 3px;">
+  {% include form2.html %}
 
-  <b>This profile is accurate</b> <br/>
-  Strongly disagree <input type="range" name="accurate" min="0" max="10" step="1">Strongly agree
-  <!--//
-       <input type="radio" name="accurate" value="-2"> Strongly disagree
-       <input type="radio" name="accurate" value="-1"> Disagree
-       <input type="radio" name="accurate" value="0"> Neither
-       <input type="radio" name="accurate" value="1"> Agree
-       <input type="radio" name="accurate" value="2"> Strongly agree<br/> //-->
-</div>
-<div style="padding: 3px;">
-  <b>The indicative map is informative</b> <br/>
-Strongly disagree <input type="range" name="map" min="0" max="10" step="1">Strongly agree
-</div>
-<div style="padding: 3px;">
-  <b>The diagram is informative</b> <br/>
-Strongly disagree <input type="range" name="diagram" min="0" max="10" step="1">Strongly agree
-</div>
-
-   <h3>Your suggestions</h3>
-   <textarea rows=3 cols=50 name="suggestions">Add your comments and suggestions.</textarea><br/>
-   <textarea rows=2 cols=50 name="references">Suggest additional references.</textarea><br/>
-
-  <button type="submit">Send</button>
-</form>
 </div>
 
 {{ content }}
