--- a/_layouts/EFG.html
+++ b/_layouts/EFG.html
@@ -3,7 +3,7 @@ layout: default
 section: browse
 ---
 <h1>{{ page.name }}</h1>
-<h2>Biome: {{ page.biome }}</h2>
+<h3>Biome: <a href="../Biomes/{{ page.biomecode }}.html">{{ page.biome }}</a></h3>
 <h4>Contributors: {{ page.contributors }}</h4>
 <div style=";
    position: relative;
