fine tuning form 2

--- a/_includes/form-step2.html
+++ b/_includes/form-step2.html
@@ -6,28 +6,25 @@
   Your name: <input type="text" name="name"><br/>
   Your affiliation: <input type="text" name="affiliation">
 
-  <h4>Ecological traits</h4>
-  <div style="padding: 3px;">
+  <p>Instructions: Use the slide bar to rate each section, add your comments or suggestions in the text area </p>
+
+  <h5>Ecological traits</h5>
     Uninformative <input type="range" name="ET-qual" min="0" max="10" step="1"> Very informative<br/>
-    <textarea rows=1 cols=50 name="ET-comments">Add your comments and suggestions.</textarea><br/>
-  </div>
+    <textarea rows=2 cols=50 name="ET-comments">Add your comments and suggestions.</textarea><br/>
+
   <h5>Key ecological drivers</h5>
   <div style="padding: 3px;">
     Uninformative <input type="range" name="KED-qual" min="0" max="10" step="1"> Very informative<br/>
-    <textarea rows=1 cols=50 name="KED-comments">Add your comments and suggestions.</textarea><br/>
+    <textarea rows=2 cols=50 name="KED-comments">Add your comments and suggestions.</textarea><br/>
   </div>
 
-  <b>Diagramatic assembly model</b> <br/>
-
-  <div style="padding: 3px;">
+  <h5>Diagramatic assembly model</h5>
     Uninformative <input type="range" name="DAM-qual" min="0" max="10" step="1"> Very informative<br/>
-    <textarea rows=1 cols=50 name="DAM-comments">Add your comments and suggestions.</textarea><br/>
-  </div>
+    <textarea rows=2 cols=50 name="DAM-comments">Add your comments and suggestions.</textarea><br/>
+
   <h5>Distribution and map</h5>
-  <div style="padding: 3px;">
     Uninformative <input type="range" name="MAP-qual" min="0" max="10" step="1"> Very informative<br/>
-    <textarea rows=1 cols=50 name="MAP-comments">Add your comments and suggestions.</textarea><br/>
-  </div>
+    <textarea rows=2 cols=50 name="MAP-comments">Add your comments and suggestions.</textarea><br/>
     <!--//
           <h3>Your suggestions</h3>
           <textarea rows=3 cols=50 name="suggestions">Add your comments and suggestions.</textarea><br/>
