change the form for biomes and functional groups

--- a/_includes/form-step2.html
+++ b/_includes/form-step2.html
@@ -6,32 +6,12 @@
   Your name: <input type="text" name="name"><br/>
   Your affiliation: <input type="text" name="affiliation">
 
-  <p>Instructions: Use the slide bar to rate each section, add your comments or suggestions in the text area </p>
+  <p>Instructions: Use the slide bar to express your general opinion on the content, add your comments or suggestions in the text area below. </p>
 
   <div style="padding: 3px;">
-      <b>Ecological traits</b>
+      <b>How do you find the description of this biome?</b>
     Uninformative <input type="range" name="ET-qual" min="0" max="10" step="1"> Very informative<br/>
-    <textarea rows=2 cols=50 name="ET-comments">Add your comments and suggestions.</textarea><br/>
+    <textarea rows=8 cols=50 name="ET-comments">Add your comments and suggestions.</textarea><br/>
   </div>
-
-  <div style="padding: 3px;">
-  <b style="font-size: 15px;font-weight: bold;">Key ecological drivers</b>
-
-    Uninformative <input type="range" name="KED-qual" min="0" max="10" step="1"> Very informative<br/>
-    <textarea rows=2 cols=50 name="KED-comments">Add your comments and suggestions.</textarea><br/>
-  </div>
-
-  <h5>Diagramatic assembly model</h5>
-    Uninformative <input type="range" name="DAM-qual" min="0" max="10" step="1"> Very informative<br/>
-    <textarea rows=2 cols=50 name="DAM-comments">Add your comments and suggestions.</textarea><br/>
-
-  <h5>Distribution and map</h5>
-    Uninformative <input type="range" name="MAP-qual" min="0" max="10" step="1"> Very informative<br/>
-    <textarea rows=2 cols=50 name="MAP-comments">Add your comments and suggestions.</textarea><br/>
-    <!--//
-          <h3>Your suggestions</h3>
-          <textarea rows=3 cols=50 name="suggestions">Add your comments and suggestions.</textarea><br/>
-          <textarea rows=2 cols=50 name="references">Suggest additional references.</textarea><br/>
-          //-->
   <button type="submit">Send</button>
 </form>
