plugin to test if file exists

--- a/_includes/form-step3.html
+++ b/_includes/form-step3.html
@@ -6,7 +6,7 @@
   Your name: <input type="text" name="name"><br/>
   Your affiliation: <input type="text" name="affiliation">
 
-  <p>Instructions: Use the slide bar to rate each section, add your comments or suggestions in the text area </p>
+<b style="font-size: 15px;font-weight: bold;">Instructions:</b> Use the slide bar to rate each section, add your comments or suggestions in the text area <br/>
 
   <div style="padding: 3px;">
     <b style="font-size: 15px;font-weight: bold;">Ecological traits</b><br/>
