--- a/_includes/form-step2.html
+++ b/_includes/form-step2.html
@@ -1,6 +1,6 @@
 
 <form action="https://smartforms.dev/submit/5e20e9c5d2b1f304f0563ae2" method="POST">
-  <h3>Step 2: Review this profile</h3>
+  <h3>Step 2: Review the profile for this biome</h3>
   <h4>Contact information</h4>
   <input type="hidden" name="EFG" value="{{ page.name }}">
   Your name: <input type="text" name="name"><br/>
@@ -9,7 +9,7 @@
   <p>Instructions: Use the slide bar to express your general opinion on the content, add your comments or suggestions in the text area below. </p>
 
   <div style="padding: 3px;">
-      <b>How do you find the description of this biome?</b>
+      <b style="font-size: 15px;font-weight: bold;">How do you find the description of this biome?</b><br/>
     Uninformative <input type="range" name="ET-qual" min="0" max="10" step="1"> Very informative<br/>
     <textarea rows=8 cols=50 name="ET-comments">Add your comments and suggestions.</textarea><br/>
   </div>
