--- a/_includes/MAP.html
+++ b/_includes/MAP.html
@@ -1,1 +1,1 @@
-<img src="../assets/maps/{{ page.code }}.png" width="100%">
+<img src="../assets/maps/{{ page.code }}.png" width="100%" caption="The maps show areas of the world containing major (coloured red) or minor occurrences (coloured yellow) of {{ page.name }}.">
