add diagrammatic assembly models for F1 and F2

--- a/_includes/DAM.html
+++ b/_includes/DAM.html
@@ -1,1 +1,6 @@
-<img src="../assets/diagrams/{{ page.code }}.png" width="100%">
+<figure>
+  <img src="../assets/diagrams/{{ page.code }}.png" width="100%"/>
+ <figcaption>
+Diagrammatic assembly model of {{ page.name }}.
+ </figcaption>
+</figure>
