embedding the map details in the include file

--- a/_includes/MAP.html
+++ b/_includes/MAP.html
@@ -1,6 +1,6 @@
 <figure>
 <img src="../assets/maps/{{ page.code }}.png" width="100%"/>
  <figcaption>
-The maps show areas of the world containing major (coloured red) or minor occurrences (coloured yellow) of {{ page.name }}.
+   <b>Map details for {{ page.name }}</b>: {{ details }} Major occurrences coloured red, minor occurrences coloured yellow.
  </figcaption>
 </figure>
