minor edits in forms and maps

--- a/_includes/MAP.html
+++ b/_includes/MAP.html
@@ -1,6 +1,6 @@
 <figure>
 <img src="../assets/maps/{{ page.code }}.png" width="100%"/>
  <figcaption>
-   <b>Map details for {{ page.name }}</b>: {{ details }} Major occurrences coloured red, minor occurrences coloured yellow.
+   <b>Map details for {{ page.name }}</b>: {{ map_det }} Major occurrences coloured red, minor occurrences coloured yellow.
  </figcaption>
 </figure>
