--- a/_includes/form-step3.html
+++ b/_includes/form-step3.html
@@ -4,7 +4,7 @@
   <h4>Contact information</h4>
   <input type="hidden" name="EFG" value="{{ page.name }}">
   Your name: <input type="text" name="name"><br/>
-  Your affiliation: <input type="text" name="affiliation">
+  Your affiliation: <input type="text" name="affiliation"><br/>
 
 <b style="font-size: 15px;font-weight: bold;">Instructions:</b> Use the slide bar to rate each section, add your comments or suggestions in the text area <br/>
 
