--- a/_includes/form-step2.html
+++ b/_includes/form-step2.html
@@ -1,12 +1,12 @@
 
 <form action="https://smartforms.dev/submit/5e20e9c5d2b1f304f0563ae2" method="POST">
-  <h3>Step 2: Review the profile for this biome</h3>
+  <h3>Review the profile for {{ page.name }}</h3>
   <h4>Contact information</h4>
   <input type="hidden" name="EFG" value="{{ page.name }}">
   Your name: <input type="text" name="name"><br/>
-  Your affiliation: <input type="text" name="affiliation">
+  Your affiliation: <input type="text" name="affiliation"><br/>
 
-  <p>Instructions: Use the slide bar to express your general opinion on the content, add your comments or suggestions in the text area below. </p>
+  <b style="font-size: 15px;font-weight: bold;">Instructions:</b> Use the slide bar to express your general opinion on the content, add your comments or suggestions in the text area below. <br/>
 
   <div style="padding: 3px;">
       <b style="font-size: 15px;font-weight: bold;">How do you find the description of this biome?</b><br/>
