--- a/_includes/form-step3.html
+++ b/_includes/form-step3.html
@@ -1,6 +1,6 @@
 
 <form action="https://smartforms.dev/submit/5e20e9c5d2b1f304f0563ae2" method="POST">
-  <h3>Step 2: Review this profile</h3>
+  <h3>Review profile for {{ page.name }}</h3>
   <h4>Contact information</h4>
   <input type="hidden" name="EFG" value="{{ page.name }}">
   Your name: <input type="text" name="name"><br/>
@@ -20,7 +20,7 @@
     <textarea rows=2 cols=50 name="KED-comments">Add your comments and suggestions.</textarea><br/>
   </div>
 
-  <b style="font-size: 15px;font-weight: bold;">Diagramatic assembly model</b><br/>
+  <b style="font-size: 15px;font-weight: bold;">Diagrammatic assembly model</b><br/>
 
     Uninformative <input type="range" name="DAM-qual" min="0" max="10" step="1"> Very informative<br/>
     <textarea rows=2 cols=50 name="DAM-comments">Add your comments and suggestions.</textarea><br/>
