Adding links to profile structure

--- a/_includes/DAM.html
+++ b/_includes/DAM.html
@@ -1,6 +1,6 @@
 <figure>
   <img src="../assets/diagrams/{{ page.code }}.png" width="100%"/>
  <figcaption>
-Diagrammatic assembly model of {{ page.name }}.<a href="Profile-structure.html" style="font-size: 10px;font-weight: bold;font-color: red;">See general notes on diagrams.</a>
+Diagrammatic assembly model of {{ page.name }}.<a href="../Profile-structure.html#DAM" style="font-size: 10px;font-weight: bold;font-color: red;">See general notes on diagrams.</a>
  </figcaption>
 </figure>
