--- a/_includes/form-step1.html
+++ b/_includes/form-step1.html
@@ -10,9 +10,9 @@ Your e-mail : <input type="email" name="email"><br/>
 
    <h4>Your qualifications</h4>
      Describe how your area of expertise relates to ecosystems research, conservation or management: <br/>
-   <textarea rows=5 cols=60 name="qualifications">For example: "Senior researcher in deep sea biology...", "Field experience on restoration of tropical dry forest...", "Risk assessment of freshwater ecosystems...", etc.</textarea><br/>
+   <textarea rows=5 cols=60 name="expertise">For example: "Senior researcher in deep sea biology...", "Field experience on restoration of tropical dry forest...", "Risk assessment of freshwater ecosystems...", etc.</textarea><br/>
    Describe how you want to contribute to the global ecosystem typology: <br/>
-   <textarea rows=4 cols=60 name="qualifications">For example: "Review profiles of marine ecosystems...", "Crosswalk with national ecosystem classifications...", "Join a group of specialists for...", etc.</textarea><br/>
+   <textarea rows=4 cols=60 name="contribution">For example: "Review profiles of marine ecosystems...", "Crosswalk with national ecosystem classifications...", "Join a group of specialists for...", etc.</textarea><br/>
 
   <button type="submit">Send</button>
 </form>
