--- a/_includes/form-step2.html
+++ b/_includes/form-step2.html
@@ -10,8 +10,8 @@
 
   <div style="padding: 3px;">
       <b style="font-size: 15px;font-weight: bold;">How do you find the description of this biome?</b><br/>
-    Uninformative <input type="range" name="ET-qual" min="0" max="10" step="1"> Very informative<br/>
-    <textarea rows=8 cols=50 name="ET-comments">Add your comments and suggestions.</textarea><br/>
+    Uninformative <input type="range" name="Biome-qual" min="0" max="10" step="1"> Very informative<br/>
+    <textarea rows=8 cols=50 name="Biome-comments">Add your comments and suggestions.</textarea><br/>
   </div>
   <button type="submit">Send</button>
 </form>
