--- a/_includes/form-step3.html
+++ b/_includes/form-step3.html
@@ -1,7 +1,7 @@
 
 <form action="https://smartforms.dev/submit/5e20e9c5d2b1f304f0563ae2" method="POST">
   <h3>Review profile for {{ page.name }}</h3>
-  <h4>Contact information</h4>
+  <b style="font-size: 15px;font-weight: bold;">Contact information</b><br/>
   <input type="hidden" name="EFG" value="{{ page.name }}">
   Your name: <input type="text" name="name"><br/>
   Your affiliation: <input type="text" name="affiliation"><br/>
