--- a/_layouts/realm.html
+++ b/_layouts/realm.html
@@ -14,4 +14,4 @@ layout: default
     {% endif %}
   {% endfor %}
 </ul>
- <a href="../Realms.html">Back to the Realm overview</a></li>
+ <a href="../Realms.html">Back to the Realm overview</a>
