Adding links back to realm or biome overviews

--- a/_layouts/EFG.html
+++ b/_layouts/EFG.html
@@ -26,4 +26,18 @@ section: browse
 </div>
 
 {{ content }}
+
+Back to: <a href="../Realms.html">Realm overview</a>
+{% for therealm in site.Realms %}
+ {% if page.realm contains therealm.name %}
+   / <a href="../Realm/{{ therealm.name }}.html">{{ therealm.name }} Realm</a>
+   {% endif %}
+{% endfor %}
+<a href="../Biomes.html">Biome overview</a>
+{% for therealm in site.Biomes %}
+ {% if page.biomecode contains therealm.code %}
+   / <a href="../Biomes/{{ therealm.name }}.html">{{ therealm.name }} Biome</a>
+   {% endif %}
+{% endfor %}
+
 </div>
