fixed Realm links

--- a/_layouts/EFG.html
+++ b/_layouts/EFG.html
@@ -30,7 +30,7 @@ section: browse
 Back to: <a href="../Realms.html">Realm overview</a>
 {% for therealm in site.Realms %}
  {% if page.realm contains therealm.name %}
-   / <a href="../Realm/{{ therealm.name }}.html">{{ therealm.name }} Realm</a>
+   / <a href="../Realms/{{ therealm.name }}.html">{{ therealm.name }} Realm</a>
    {% endif %}
 {% endfor %}
 / <a href="../Biomes.html">Biome overview</a>
