add biomes links

--- a/_layouts/biome.html
+++ b/_layouts/biome.html
@@ -39,4 +39,5 @@ Back to: <a href="../Realms.html">Realm overview</a>
    / <a href="../Realms/{{ therealm.name }}.html">{{ therealm.name }} Realm</a>
    {% endif %}
 {% endfor %}
+/ <a href="../Biomes.html">Biomes overview</a>
 </div>
