--- a/_layouts/EFG.html
+++ b/_layouts/EFG.html
@@ -36,7 +36,7 @@ Back to: <a href="../Realms.html">Realm overview</a>
 / <a href="../Biomes.html">Biome overview</a>
 {% for therealm in site.Biomes %}
  {% if page.biomecode == therealm.code %}
-   / <a href="../Biomes/{{ therealm.code }}.html">{{ therealm.name }} Biome</a>
+   / <a href="../Biomes/{{ therealm.code }}.html">{{ therealm.name }}</a>
    {% endif %}
 {% endfor %}
 
