redirect form to jrferrerparis

--- a/_includes/form-step1.html
+++ b/_includes/form-step1.html
@@ -1,4 +1,4 @@
-<form action="https://smartforms.dev/submit/5e215c4dd2b1f304f0563aff" method="POST">
+<form action="http://jrferrerparis.info/feedback-form-handling/user-registration.php" method="POST">
  <h3>Step 1: Register</h3>
  <h4>Contact information</h4>
  Your name: <input type="text" name="name"><br/>
