--- a/_includes/form-step2.html
+++ b/_includes/form-step2.html
@@ -1,8 +1,8 @@
 
-<form action="https://smartforms.dev/submit/5e20e9c5d2b1f304f0563ae2" method="POST">
+<form action="http://jrferrerparis.info/feedback-form-handling/biome-comments.php" method="POST">
   <h3>Review the profile for {{ page.name }}</h3>
   <h4>Contact information</h4>
-  <input type="hidden" name="EFG" value="{{ page.name }}">
+  <input type="hidden" name="Biome" value="{{ page.name }}">
   Your name: <input type="text" name="name"><br/>
   Your affiliation: <input type="text" name="affiliation"><br/>
 
