--- a/_includes/form-step3.html
+++ b/_includes/form-step3.html
@@ -1,5 +1,5 @@
 
-<form action="https://smartforms.dev/submit/5e20e9c5d2b1f304f0563ae2" method="POST">
+<form action="http://jrferrerparis.info/feedback-form-handling/efg-comments.php" method="POST">
   <h3>Review profile for {{ page.name }}</h3>
   <b style="font-size: 15px;font-weight: bold;">Contact information</b><br/>
   <input type="hidden" name="EFG" value="{{ page.name }}">
