add hidden codes to the form

--- a/_includes/form-step2.html
+++ b/_includes/form-step2.html
@@ -3,6 +3,7 @@
   <h3>Review the profile for {{ page.name }}</h3>
   <h4>Contact information</h4>
   <input type="hidden" name="Biome" value="{{ page.name }}">
+  <input type="hidden" name="Biomecode" value="{{ page.code }}">
   Your name: <input type="text" name="name"><br/>
   Your affiliation: <input type="text" name="affiliation"><br/>
 
