--- a/_includes/form-step3.html
+++ b/_includes/form-step3.html
@@ -3,6 +3,7 @@
   <h3>Review profile for {{ page.name }}</h3>
   <b style="font-size: 15px;font-weight: bold;">Contact information</b><br/>
   <input type="hidden" name="EFG" value="{{ page.name }}">
+  <input type="hidden" name="EFGcode" value="{{ page.code }}">
   Your name: <input type="text" name="name"><br/>
   Your affiliation: <input type="text" name="affiliation"><br/>
 
