--- a/_layouts/EFG.html
+++ b/_layouts/EFG.html
@@ -27,6 +27,8 @@ section: browse
 
 {{ content }}
 
+<a href="../Glossary.html">Check the Glossary</a>
+<br/>
 Back to: <a href="../Realms.html">Realm overview</a>
 {% for therealm in site.Realms %}
  {% if page.realm contains therealm.name %}
