--- a/_layouts/biome.html
+++ b/_layouts/biome.html
@@ -40,4 +40,7 @@ Back to: <a href="../Realms.html">Realm overview</a>
    {% endif %}
 {% endfor %}
 / <a href="../Biomes.html">Biomes overview</a>
+<br/>
+Check: <a href="../Glossary.html"> the Glossary</a> / <a href="../Profile-structure.html"> Profile structure</a> / <a href="https://iucnrle.org/about-rle/ongoing-initiatives/global-ecosystem-typology/" target="_blank">the public document</a>
+
 </div>
