--- a/_layouts/realm.html
+++ b/_layouts/realm.html
@@ -15,3 +15,5 @@ layout: default
   {% endfor %}
 </ul>
  <a href="../Realms.html">Back to the Realm overview</a>
+ <br/>
+ Check: <a href="../Glossary.html"> the Glossary</a> / <a href="https://iucnrle.org/about-rle/ongoing-initiatives/global-ecosystem-typology/" target="_blank">the public document</a>
