Moved contact form to a google forms link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
             {% endif %}
 <p class="header">
   {% include navigation.html %}
-    {% if page.realm  %}
+   <!--// {% if page.realm  %} //-->
       {% include navigation1.html %}
-    {% endif %}
+   <!--// {% endif %} //-->
   {% include navigation2.html %}
 </p>
         {% if site.github.is_project_page %}
