--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,12 @@
             {% endif %}
 <p class="header">
   {% include navigation.html %}
-   <!--// {% if page.realm  %} //-->
+   <!--//
+    {% if page.realm  %}
       {% include navigation1.html %}
-   <!--// {% endif %} //-->
+    {% endif %}
   {% include navigation2.html %}
+  //-->
 </p>
         {% if site.github.is_project_page %}
           <p class="header">This site is maintained by <a class="buttons github" href="{{ site.github.repository_url }}">{{ site.github.owner_name }}</a></p>
