Test updated markdown files and layout

--- a/_layouts/EFG.html
+++ b/_layouts/EFG.html
@@ -4,7 +4,8 @@ section: browse
 ---
 <h1>{{ page.name }}</h1>
 <h3>Biome: <a href="../Biomes/{{ page.biomecode }}.html">{{ page.biome }}</a></h3>
-<h4>Contributors: {{ page.contributors }}</h4>
+<h4>Contributors: {{ page.contributors }} (texts); {{ page.mapcontributors }} (maps)</h4>
+<b style="color: #333333;font-size: 9px;">Version: {{ page.version }}</b>
 <div style=";
    position: relative;
   left: 0px;
