add link to official page

--- a/_layouts/EFG.html
+++ b/_layouts/EFG.html
@@ -5,7 +5,7 @@ section: browse
 <h1>{{ page.name }}</h1>
 <h3>Biome: <a href="../Biomes/{{ page.biomecode }}.html">{{ page.biome }}</a></h3>
 <h4>Contributors:<br/> {{ page.contributors }} (texts)<br/> {{ page.mapcontributors }} (maps)</h4>
-<b style="color: #333333;font-size: 12px;">Version: {{ page.version }}</b>
+<b style="color: #333333;font-size: 12px;">Version: {{ page.version }} [<a href='https://global-ecosystems.org/explore/groups/{{ page.code }}'>see current version</a>]</b>
 <div style=";
    position: relative;
   left: 0px;
