--- a/_layouts/EFG.html
+++ b/_layouts/EFG.html
@@ -20,7 +20,7 @@ section: browse
 <figure>
 <img src="../assets/maps/{{ page.mapcode }}.png" width="100%"/>
  <figcaption>
-   <b style="font-size: 15px;font-weight: bold;">Map details for {{ page.name }} ({{map.code}} {{map.version}})</b>: {{ map.description }} <font style="font-size: 10px;font-weight: normal;">Major occurrences coloured red, minor occurrences coloured yellow.</font> <a href="/Ecosystem-profiles-comments/Profile-structure.html#MAP" style="font-size: 10px;font-weight: bold;font-color: red;">See general notes on maps.</a> <a href="../assets/maps/{{ page.code }}.png" style="font-size: 10px;font-weight: bold;font-color: red;" target="_blank">Open image full size.</a>
+   <b style="font-size: 15px;font-weight: bold;">Map details for {{ page.name }} (map code {{map.code}} {{map.version}})</b>: {{ map.description }} <font style="font-size: 10px;font-weight: normal;">Major occurrences coloured red, minor occurrences coloured yellow.</font> <a href="/Ecosystem-profiles-comments/Profile-structure.html#MAP" style="font-size: 10px;font-weight: bold;font-color: red;">See general notes on maps.</a> <a href="../assets/maps/{{ page.code }}.png" style="font-size: 10px;font-weight: bold;font-color: red;" target="_blank">Open image full size.</a>
  </figcaption>
 </figure>
 
