--- a/_layouts/EFG.html
+++ b/_layouts/EFG.html
@@ -37,6 +37,7 @@ section: browse
 <ul>
   {% assign mapref = site.data.maprefs[page.mapcode] %}
 {% for ref in mapref %}
+<li>{{ ref }}</li>
 <li>{{site.data.references[ref.references] | markdownify}}</li>
 {% endfor %}
 </ul>
