--- a/_layouts/EFG.html
+++ b/_layouts/EFG.html
@@ -18,7 +18,7 @@ section: browse
 {{ content }}
 
 <figure>
-<img src="../assets/maps/{{ page.mapcode }}.png" width="100%"/>
+<img src="../assets/maps/{{ page.mapcode }}.svg" width="100%"/>
  <figcaption>
    <b style="font-size: 15px;font-weight: bold;">Map details for {{ page.name }} (map code {{map.code}} {{map.version}})</b>: {{ map.description }} <font style="font-size: 10px;font-weight: normal;">Major occurrences coloured red, minor occurrences coloured yellow.</font> <a href="/Ecosystem-profiles-comments/Profile-structure.html#MAP" style="font-size: 10px;font-weight: bold;font-color: red;">See general notes on maps.</a> <a href="../assets/maps/{{ page.mapcode }}.png" style="font-size: 10px;font-weight: bold;font-color: red;" target="_blank">Open image full size.</a>
  </figcaption>
